# trial-app

./: README.md  cluster_maxcut.yaml  cluster_maxcut_lib.py  molecular_ground_state.yaml  molecular_ground_state_lib.py  pyproject.toml  spin_dynamics.yaml  spin_dynamics_lib.py  streamlit_app.py  utils.py
